# Backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  tox.ini
migrations/: 0001_init_schema.down.sql  0001_init_schema.up.sql
models/: __init__.py  base_model.py  user.py
models/challenges/: challenge.py  language.py  submission.py
models/migrations/: 0001_up__init_auth.sql
utils/: snowflake.py
