[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Tech With Tim backend services."
authors = ["Sylte <contact@sylte.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
PyJWT = "^2.4.0"
aiohttp = "^3.8.1"
fastapi = "^0.78.0"
aioredis = "^2.0.1"
aiokafka = "^0.7.2"
uvicorn = "^0.18.1"
pydantic = "^1.9.1"
omegaconf = "^2.2.2"
python-dotenv = "^0.20.0"
typing-extensions = "^4.2.0"
uvloop = {markers = "platform_system == 'linux'", version = "*"}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
