[tool.poetry]
name = "backend"
version = "1"
description = "Backend services for the Tech With Tim discord server."
authors = ["Tech With Tim Community"]

[tool.poetry.dependencies]
python = "^3.9"
uvloop = {markers = "platform_system == 'linux'", version = "*"}
pydantic = "^2.5.2"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
black = {extras = ["d"], version = "^23.11.0"}
flake8 = "^6.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
